<resources>
    <string name="app_name">SensorDataCollector</string>
    <string name="title_home">Home</string>
    <string name="title_table">Table</string>
    <string name="title_graph">Graph</string>
    <string name="status_connection">Not Connected</string>
    <string name="hint_serverurl">Server URL</string>
    <string name="hint_port">Port</string>
    <string name="hint_username">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_topictemperature">Topic - Temperature</string>
    <string name="hint_topichumidity">Topic - Humidity</string>
    <string name="hint_topicpressure">Topic - Pressure</string>
    <string name="btn_connect">Connect</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
