<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.ddns.achouse.sensordatacollector.SettingsFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <EditText
            android:id="@+id/serverUrl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dp"
            android:hint="@string/hint_serverurl"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dp"
            android:hint="@string/hint_port"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dp"
            android:hint="@string/hint_username"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dp"
            android:hint="@string/hint_password"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/topicTemperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_topictemperature"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/topicHumidity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_topichumidity"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/topicPressure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_topicpressure"
            android:textSize="16dp" />
        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_connect"/>
    </LinearLayout>

</RelativeLayout>